[package]
name = "bl616-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
bare-metal = "1.0.0"
vcell = "0.1.3"

[dependencies.critical-section]
optional = true
version = "1.1"

[dependencies.riscv-rt]
optional = true
version = "0.11.0"

[features]
rt = ["riscv-rt"]