[package]
name = "bl61x-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.11.1"
vcell = "0.1.3"

[dependencies.critical_section]
package = "critical-section"
optional = true
version = "1.1.2"

[features]
critical-section = ["critical_section", "riscv/critical-section-single-hart"]
rt = []